[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybroom"
version = "0.1.2"
description = "🧹 A Python cleanup tool for removing __pycache__ and virtual environments."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Frederick Pellerin", email = "fredp3d@proton.me"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]
keywords = [
    "python",
    "cleanup",
    "cli",
    "cache",
    "virtual-environment",
    "build-artifacts",
    "development-tools"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/TheRealFREDP3D/PyBroom"

[project.scripts]
pybroom = "pybroom:main"

[tool.setuptools]
py-modules = ["pybroom"]

[project.optional-dependencies]
# Add any optional dependencies here

[tool.setuptools.packages.find]
# Package discovery configuration
